--- a/SimpleCache.Net45/SimpleCache.Net45.csproj
+++ b/SimpleCache.Net45/SimpleCache.Net45.csproj
@@ -56,8 +56,11 @@
     <Compile Include="..\SimpleCache.Core\SQLiteAsync.cs">
       <Link>SQLiteAsync.cs</Link>
     </Compile>
-    <Compile Include="..\SimpleCache.Core\SqLiteObjectCacheBase.cs">
-      <Link>SqLiteObjectCacheBase.cs</Link>
+    <Compile Include="..\SimpleCache.Core\SqliteObjectCacheBase.cs">
+      <Link>SqliteObjectCacheBase.cs</Link>
+    </Compile>
+    <Compile Include="..\SimpleCache.Net4\SqliteObjectCache.cs">
+      <Link>SqliteObjectCache.cs</Link>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
