--- a/SimpleCache.Tests/SimpleCache.Tests.csproj
+++ b/SimpleCache.Tests/SimpleCache.Tests.csproj
@@ -65,7 +65,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SqliteObjectCache.cs" />
+    <Compile Include="SqliteObjectCacheTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
