--- a/SimpleCache.Tests/SimpleCache.Tests.csproj
+++ b/SimpleCache.Tests/SimpleCache.Tests.csproj
@@ -35,7 +35,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>SimpleCache.snk</AssemblyOriginatorKeyFile>
@@ -65,6 +65,8 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SQLite.cs" />
+    <Compile Include="SQLiteAsync.cs" />
     <Compile Include="SqliteObjectCacheTest.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -72,9 +74,9 @@
     <None Include="SimpleCache.snk" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\SimpleCache.Net4\SimpleCache.Net4.csproj">
-      <Project>{5a320348-7ae0-421a-b3ec-25ff8fed4243}</Project>
-      <Name>SimpleCache.Net4</Name>
+    <ProjectReference Include="..\SimpleCache.Net45\SimpleCache.Net45.csproj">
+      <Project>{0b199775-aa32-4673-8c1f-9ec88754d751}</Project>
+      <Name>SimpleCache.Net45</Name>
     </ProjectReference>
   </ItemGroup>
   <Choose>
