Json.NET 8 and minor refactoring

--- a/SimpleCache.Tests/SimpleCache.Tests.csproj
+++ b/SimpleCache.Tests/SimpleCache.Tests.csproj
@@ -41,8 +41,8 @@
     <AssemblyOriginatorKeyFile>SimpleCache.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.8.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="nunit.framework, Version=2.6.4.14350, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
@@ -77,6 +77,10 @@
     <ProjectReference Include="..\SimpleCache.Net45\SimpleCache.Net45.csproj">
       <Project>{0b199775-aa32-4673-8c1f-9ec88754d751}</Project>
       <Name>SimpleCache.Net45</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SimpleCache\SimpleCache.csproj">
+      <Project>{19cabcad-c5ad-4008-a4c0-152775cb58af}</Project>
+      <Name>SimpleCache</Name>
     </ProjectReference>
   </ItemGroup>
   <Choose>
