--- a/SimpleCache.iOS/SimpleCache.iOS.csproj
+++ b/SimpleCache.iOS/SimpleCache.iOS.csproj
@@ -72,6 +72,9 @@
     <Folder Include="Resources\" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\CommonAssemblyInfo.cs">
+      <Link>Properties\CommonAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqliteObjectCache.cs" />
   </ItemGroup>
