--- a/SimpleCache.nuspec
+++ b/SimpleCache.nuspec
@@ -5,13 +5,13 @@
 		<title>SimpleCache for .NET</title>
 		<version>1.0.0</version>
 		<authors>Nicola Iarocci</authors>
-		<owners>Nicola Iarocci, CIR2000</owners>
+		<owners>Nicola Iarocci</owners>
 		<description>Permanent, cross-platform, asynchronous key-value object cache</description>
 		<releaseNotes>First public release</releaseNotes>
-		<copyright>Copyright 2016 Nicola Iarocci and CIR2000</copyright>
+		<copyright>Copyright 2016 Nicola Iarocci</copyright>
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
-		<licenseUrl>https://github.com/CIR2000/SimpleCache/blob/master/LICENSE.txt</licenseUrl>
-		<projectUrl>https://github.com/CIR2000/SimpleCache</projectUrl>
+		<licenseUrl>https://github.com/nicolaiarocci/SimpleCache/blob/master/LICENSE</licenseUrl>
+		<projectUrl>https://github.com/nicolaiarocci/SimpleCache</projectUrl>
 		<tags></tags>
 		<dependencies>
 			<group>
