--- a/SimpleCache.Net45/SimpleCache.Net45.csproj
+++ b/SimpleCache.Net45/SimpleCache.Net45.csproj
@@ -77,7 +77,12 @@
     <None Include="packages.config" />
     <None Include="SimpleCache.snk" />
   </ItemGroup>
-  <Import Project="..\SimpleCache.Core\SimpleCache.Core.projitems" Label="Shared" />
+  <ItemGroup>
+    <ProjectReference Include="..\SimpleCache\SimpleCache.csproj">
+      <Project>{19cabcad-c5ad-4008-a4c0-152775cb58af}</Project>
+      <Name>SimpleCache</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
