--- a/SimpleCache.Android/SimpleCache.Android.csproj
+++ b/SimpleCache.Android/SimpleCache.Android.csproj
@@ -66,11 +66,6 @@
   <ItemGroup>
     <AndroidResource Include="Resources\values\Strings.xml" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\SimpleCache\SimpleCache.csproj">
-      <Project>{19CABCAD-C5AD-4008-A4C0-152775CB58AF}</Project>
-      <Name>SimpleCache</Name>
-    </ProjectReference>
-  </ItemGroup>
+  <Import Project="..\SimpleCache.Core\SimpleCache.Core.projitems" Label="Shared" />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
