--- a/SimpleCache/SimpleCache.csproj
+++ b/SimpleCache/SimpleCache.csproj
@@ -29,7 +29,8 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>..\bin\Release\portable45-net45+win8+wp8+wpa81\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <DefineConstants>
+    </DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <DocumentationFile>..\bin\Release\portable45-net45+win8+wp8+wpa81\SimpleCache.XML</DocumentationFile>
