--- a/SimpleObjectCache.Tests/SimpleObjectCache.Tests.csproj
+++ b/SimpleObjectCache.Tests/SimpleObjectCache.Tests.csproj
@@ -49,8 +49,8 @@
       <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="SimpleCache, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\SimpleCache.1.0.0\lib\net45\SimpleCache.dll</HintPath>
+    <Reference Include="SimpleObjectCache, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\SimpleObjectCache.1.0.0\lib\net45\SimpleObjectCache.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="SQLite.Net, Version=3.1.0.0, Culture=neutral, processorArchitecture=MSIL">
